# CalorieCalc

./: .gitignore  ADVANCED_FEATURES.md  CMakeLists.txt  CsvImportExport.cpp  CsvImportExport.h  Diary.cpp  Diary.h  Doxyfile.in  Food.cpp  Food.h  FoodDatabase.cpp  FoodDatabase.h  ISaveStrategy.h  JsonSaveStrategy.cpp  JsonSaveStrategy.h  Logger.cpp  Logger.h  OfflineAssistant.cpp  OfflineAssistant.h  PROJECT_DOCUMENTATION.md  README.md  SavedMeal.cpp  SavedMeal.h  SqliteSaveStrategy.cpp  SqliteSaveStrategy.h  StatisticsCalculator.cpp  StatisticsCalculator.h  TextSaveStrategy.cpp  TextSaveStrategy.h  TrainingDiary.cpp  TrainingDiary.h  TrainingJsonSaveStrategy.cpp  TrainingJsonSaveStrategy.h  TrainingPlanGenerator.cpp  TrainingPlanGenerator.h  TrainingSession.cpp  TrainingSession.h  UseCase  XmlSaveStrategy.cpp  XmlSaveStrategy.h  (+1 more)
api/: main_api.cpp  rest_server.cpp  rest_server.h
benchmarks/: benchmark_main.cpp  benchmark_tests.cpp
docs/: ActivityDiagram.md  ClassDiagram.md  ComponentDiagram.md  Phase2_Report.md  RequirementsTraceability.md  SequenceDiagram.md  UseCaseDiagram.md
gui/: AuthStore.cpp  AuthStore.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  ProfileDialog.cpp  ProfileDialog.h  main_gui.cpp
mac/: Info.plist
tests/: test_csv_import.cpp  test_diary.cpp  test_food.cpp  test_fooddatabase.cpp  test_savedmeal.cpp  test_savestrategies.cpp  test_statistics.cpp
translations/: caloriecounter_uk.ts
